fix #61, time not showing while selecting it

--- a/src/modules/appointments/components/appointment-editor.scss
+++ b/src/modules/appointments/components/appointment-editor.scss
@@ -171,3 +171,9 @@
 		display: none;
 	}
 }
+
+.ms-Slider-value {
+	margin: 0 5px 0 0;
+	font-size: 13px;
+	font-style: italic;
+}
